<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg2"
    tools:context=".SecondActivity"
    >

    <TextView
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:id="@+id/TextView1"
        android:text="@string/informations"
        android:textColor="@color/purple"
        android:textSize="36dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="25dp"/>


    <TextView
        android:id="@+id/username2"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="8dp"
        android:hint="@string/nom_utilisateur"
        android:padding="8dp"
        android:paddingLeft="30dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:textSize="18dp"
        tools:context=".MainActivity" />


    <TextView
        android:id="@+id/password2"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="8dp"
        android:hint="@string/mot_passe"
        android:padding="8dp"
        android:paddingLeft="30dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:textSize="18dp" />

    <Button
        android:id="@+id/EditButton"
        android:layout_width="313dp"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/purple"
        android:text="@string/modifier"
        android:textSize="18dp"
        app:cornerRadius="20dp" />





</LinearLayout>